Tue Jun  5 22:28:46 2012  Tanaka Akira  <akr@fsij.org>

	* internal.h: rb_exec_arg and related stuff moved from intern.h

	* include/ruby/intern.h (rb_proc_exec_n): removed.

Tue Jun  5 21:57:22 2012  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_exec_arg_fixup): allocate a temporary buffer for
	  run_exec_dup2 here because it should be async-signal-safe.
	  (run_exec_dup2): use the temporary buffer.
	  (run_exec_dup2_tmpbuf_size): new function.

	* include/ruby/intern.h (rb_exec_arg): add dup2_tmpbuf field.

Tue Jun  5 20:13:15 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_obj_init_copy): should check if trusted too.

Tue Jun  5 19:59:13 2012  Tanaka Akira  <akr@fsij.org>

	* process.c (strtok): declaration removed because it is not used.

Tue Jun  5 19:33:51 2012  Tanaka Akira  <akr@fsij.org>

	* process.c (proc_spawn): don't detect simple command line here
	  because rb_exec_fillarg already did.

Tue Jun  5 19:21:10 2012  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_exec_fillarg): bail out a loop eagerly.

Tue Jun  5 19:15:14 2012  Tanaka Akira  <akr@fsij.org>

	* process.c: add comments about async-signal-safe.

	* io.c: ditto.

Tue Jun  5 09:25:10 2012  Eric Hodel  <drbrain@segment7.net>

	* io.c:  Edited documentation for IO and File open and new and
	  Kernel#open for consistency and clarity.

Mon Jun  4 21:53:56 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_sysinit): let the system not display the
	  critical-error-handler message box and the Windows Error Reporting
	  dialog.  [ruby-core:45389] [Bug #6535]

Mon Jun  4 19:36:25 2012  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_exec_fillarg): allocate one more element before
	  beginning in argv_str for try_with_sh.

	* internal.h (ARGVSTR2ARGC): adjust for the above change.
	  (ARGVSTR2ARGV): ditto.

Mon Jun  4 19:17:06 2012  Tanaka Akira  <akr@fsij.org>

	* internal.h (ARGVSTR2ARGC): defined.
	  (ARGVSTR2ARGV): defined.
